2.0.0:
Torsten Stremlau - Sun Mar 10 10:19:25 PDT 2013
 * Added support for alpha and lossless WEBP images

1.2.12:
mscott - 2012-02-06 19:40:23 PST
 * Fixed image corruption when using ImageIO framework
Sylvain - Thu Nov 22 13:09:59 PST 2012
 * Added extended XPM color table (disabled by default in IMG_xpm.c)
Sam Lantinga - Thu Jan 19 23:18:09 EST 2012
 * Fixed regression in 1.2.11 loading 8-bit PNG images with libpng

1.2.11:
Sam Lantinga - Sat Jan 14 17:54:38 EST 2012
 * Fixed loading 8-bit PNG images on Mac OS X
Sam Lantinga - Sat Dec 31 09:35:40 EST 2011
 * SDL_image is now under the zlib license
Michael Bonfils - Mon Nov 28 21:46:00 EST 2011
 * Added WEBP image support
Thomas Klausner - Wed Jan 19 19:31:25 PST 2011
 * Fixed compiling with libpng 1.4
Sam Lantinga - Mon Jan 10 12:09:57 2011 -0800
 * Added Android.mk to build on the Android platform
Sam Lantinga - Mon May 10 22:42:53 PDT 2010
 * Fixed loading HAM6 images with stencil mask
Mark Tucker - Fri, 27 Nov 2009 12:38:21 -0500
 * Fixed bug loading 15 and 16 bit BMP images

1.2.10:
Sam Lantinga - Sat Nov 14 11:22:14 PST 2009
 * Fixed bug loading multiple images

1.2.9:
Sam Lantinga - Tue Nov 10 00:29:20 PST 2009
 * Fixed alpha premultiplication on Mac OS X and iPhone OS
Sam Lantinga - Sun Nov  8 07:52:11 PST 2009
 * Fixed checking for IMG_Init() return value in image loaders

1.2.8:
Sam Lantinga - Sun Oct  4 13:12:54 PDT 2009
 * Added support for uncompressed PCX files
Mason Wheeler - 2009-06-10 06:29:45 PDT 
 * Added IMG_Init()/IMG_Quit() to prevent constantly loading and unloading DLLs
Couriersud - Mon, 12 Jan 2009 17:21:13 -0800
 * Added support for ICO and CUR image files
Eric Wing - Fri, 2 Jan 2009 02:01:16 -0800
 * Added ImageIO loading infrastructure for Mac OS X
 * Added UIImage loading infrastructure for iPhone / iPod Touch

1.2.7:
Sam Lantinga - Sun Nov  2 15:08:27 PST 2008
 * Fixed buffer overflow in BMP loading code, discovered by j00ru//vx
Sam Lantinga - Fri Dec 28 08:34:54 PST 2007